fix button spinner opacity on ios

--- a/assets/styles/abstract/_utilities.scss
+++ b/assets/styles/abstract/_utilities.scss
@@ -108,6 +108,10 @@
   cursor: pointer !important;
 }
 
+.u-pointer-default {
+  cursor: default !important;
+}
+
 .u-relative {
   position: relative !important;
 }
