--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -61,3 +61,12 @@
   justify-content: center;
   margin-bottom: 20px;
 }
+
+.spinner {
+  width: 25px;
+  height: 25px;
+}
+
+.rotate {
+  animation: rotate 2.5s linear infinite;
+}
